# torchrs

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish.yml
examples/: probav.ipynb
scripts/: download_advance.sh  download_aid.sh  download_brazilian_coffee.sh  download_crowdai_mapping.sh  download_dubai_segmentation.sh  download_etci2021.sh  download_eurosat_ms.sh  download_eurosat_rgb.sh  download_fair1m.sh  download_gid15.sh  download_hkh_glacier.sh  download_hrscd.sh  download_idtrees.sh  download_inria_ail.sh  download_levircd_plus.sh  download_oscd.sh  download_pastis.sh  download_patternnet.sh  download_probav.sh  download_resisc45.sh  download_rsicd.sh  download_rsscn7.sh  download_rsvqa_hr.sh  download_rsvqa_lr.sh  download_rsvqaxben.sh  download_s2looking.sh  download_s2mtcp.sh  download_sat.sh  download_second.sh  download_sydney_captions.sh  download_tiselac.sh  download_ucm.sh  download_ucm_captions.sh  download_whu_rs19.sh  download_zuericrop.sh
tests/: _test_datamodules.py  _test_datasets.py  test_transforms.py
tests/models/: test_rams.py
torchrs/: __init__.py  losses.py  transforms.py
torchrs/datasets/: __init__.py  advance.py  aid.py  brazilian_coffee.py  crowdai_mapping.py  dubai_segmentation.py  etci2021.py  eurosat.py  fair1m.py  gid15.py  hkh_glacier.py  hrscd.py  idtrees.py  inria_ail.py  levircd.py  oscd.py  pastis.py  patternnet.py  probav.py  resisc45.py  rsicd.py  rsscn7.py  rsvqa.py  s2looking.py  s2mtcp.py  sat.py  second.py  sydney_captions.py  tiselac.py  (+5 more)
(+42 files in other folders)
