[metadata]
name = torch-rs
version = attr: torchrs.__version__
description = PyTorch Library for Remote Sensing
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/isaaccorley/torchrs
author = Isaac Corley
author_email = isaac.corley@my.utsa.edu
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = 
    pytorch
    remote-sensing
    computer-vision
